# wt

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-22-wt-cli.md
docs/superpowers/specs/: 2026-06-22-wt-cli-design.md
src/: base.rs  cd.rs  config.rs  create.rs  git.rs  go.rs  hooks.rs  list.rs  main.rs  mk.rs  paths.rs  remove.rs  shell_init.rs
tests/: integration_test.rs
tests/common/: mod.rs
