[package]
name = "wt"
version = "0.1.0"
edition = "2024"
description = "A fast git worktree manager CLI"
license = "MIT"
repository = "https://github.com/darek/wt"
keywords = ["git", "worktree", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
